--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -6,47 +8,228 @@
   <title>TEST BAHASA KOREA</title>
   <style>
     body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
-    #login-page{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;}
-    @keyframes fadeSlideUp{from{opacity:0;transform:translateY(40px);}to{opacity:1;transform:translateY(0);}}
-    .login-container{width:90%;max-width:300px;padding:35px 25px;text-align:center;background:rgba(255,255,255,.12);backdrop-filter:blur(14px);border-radius:24px;box-shadow:0 12px 40px rgba(0,0,0,.5);animation:fadeSlideUp 0.9s ease-out forwards;}
-    .login-container h1{color:#fff;font-size:28px;margin:0 0 8px 0;text-shadow:0 2px 6px rgba(0,0,0,.7);}
+
+    /* LOGIN PAGE DENGAN ANIMASI */
+    #login-page{
+      min-height:100vh;
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+      url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
+    }
+
+    /* ANIMASI MASUK HALUS */
+    @keyframes fadeSlideUp {
+      from { opacity: 0; transform: translateY(40px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .login-container{
+      width:90%;
+      max-width:300px;
+      padding:35px 25px;
+      text-align:center;
+      background:rgba(255,255,255,.12);
+      backdrop-filter:blur(14px);
+      border-radius:24px;
+      box-shadow:0 12px 40px rgba(0,0,0,.5);
+      animation: fadeSlideUp 0.9s ease-out forwards;
+    }
+
+    .login-container h1{
+      color:#fff;font-size:28px;margin:0 0 8px 0;text-shadow:0 2px 6px rgba(0,0,0,.7);
+    }
     .login-container h1:nth-of-type(2){font-size:24px;margin-bottom:20px;}
     .login-container p{color:#eee;font-size:15px;margin-bottom:30px;}
-    input{width:100%;padding:16px;margin:12px 0;border:none;border-radius:14px;background:rgba(255,255,255,.18);color:#fff;font-size:16px;backdrop-filter:blur(4px);box-sizing:border-box;transition:all 0.3s;}
+
+    input{
+      width:100%;padding:16px;margin:12px 0;border:none;border-radius:14px;
+      background:rgba(255,255,255,.18);color:#fff;font-size:16px;
+      backdrop-filter:blur(4px);
+      box-sizing:border-box;
+      transition:all 0.3s;
+    }
     input::placeholder{color:rgba(255,255,255,.65);}
-    input:focus{outline:none;background:rgba(255,255,255,.35);box-shadow:0 0 20px rgba(255,107,157,.6);transform:scale(1.02);}
-    button{width:100%;padding:16px;margin:16px 0 8px;border:none;border-radius:14px;background:#ff6b9d;color:#fff;font-weight:bold;font-size:17px;cursor:pointer;box-shadow:0 6px 20px rgba(255,107,157,.5);transition:all 0.4s;}
-    button:hover{background:#ff8ac1;transform:translateY(-5px) scale(1.05);box-shadow:0 12px 35px rgba(255,107,157,.7);animation:pulse 1.5s infinite;}
-    @keyframes pulse{0%{box-shadow:0 6px 20px rgba(255,107,157,.5);}50%{box-shadow:0 12px 40px rgba(255,107,157,.9);}100%{box-shadow:0 6px 20px rgba(255,107,157,.5);}}
-    .copyright{margin-top:35px;color:rgba(255,255,255,.8);font-size:13px;text-shadow:0 1px 4px rgba(0,0,0,.8);}
+    input:focus{
+      outline:none;background:rgba(255,255,255,.35);
+      box-shadow:0 0 20px rgba(255,107,157,.6);
+      transform:scale(1.02);
+    }
+
+    button{
+      width:100%;padding:16px;margin:16px 0 8px;border:none;border-radius:14px;
+      background:#ff6b9d;color:#fff;font-weight:bold;font-size:17px;cursor:pointer;
+      box-shadow:0 6px 20px rgba(255,107,157,.5);
+      transition:all 0.4s;
+    }
+    button:hover{
+      background:#ff8ac1;
+      transform:translateY(-5px) scale(1.05);
+      box-shadow:0 12px 35px rgba(255,107,157,.7);
+      animation: pulse 1.5s infinite;
+    }
+    @keyframes pulse {
+      0%{box-shadow:0 6px 20px rgba(255,107,157,.5);}
+      50%{box-shadow:0 12px 40px rgba(255,107,157,.9);}
+      100%{box-shadow:0 6px 20px rgba(255,107,157,.5);}
+    }
+
+    .copyright{
+      margin-top:35px;
+      color:rgba(255,255,255,.8);
+      font-size:13px;
+      text-shadow:0 1px 4px rgba(0,0,0,.8);
+    }
+
+    /* QUIZ & RESULT - MOBILE FIRST */
     #quiz-page{display:none;min-height:100vh;padding:70px 0 80px;background:linear-gradient(#fdf6ec,#f7efe2)}
-    .header-fixed{position:fixed;top:0;left:0;right:0;display:flex;justify-content:space-between;align-items:center;background:#fff;padding:10px 15px;box-shadow:0 2px 10px rgba(0,0,0,0.1);z-index:1000;box-sizing:border-box;}
-    .timer,.submit-top{padding:12px 24px;text-align:center;color:#fff;font-weight:bold;font-size:16px;border-radius:0;min-width:110px;}
+    .header-fixed{
+      position:fixed;
+      top:0;
+      left:0;
+      right:0;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      background:#fff;
+      padding:10px 15px;
+      box-shadow:0 2px 10px rgba(0,0,0,0.1);
+      z-index:1000;
+      box-sizing:border-box;
+    }
+    .timer, .submit-top{
+      padding:12px 24px;
+      text-align:center;
+      color:#fff;
+      font-weight:bold;
+      font-size:16px;
+      border-radius:0;
+      min-width:110px;
+    }
     .timer{background:#4caf50}
     .submit-top{background:#f44336}
-    .container{max-width:540px;margin:auto;height:calc(100vh - 150px);overflow-y:auto;padding:0 15px;box-sizing:border-box;}
-    .question-wrapper{display:none;margin-bottom:40px;}
+    .container{
+      max-width:540px;
+      margin:auto;
+      height:calc(100vh - 150px);
+      overflow-y:auto;
+      padding:0 15px;
+      box-sizing:border-box;
+    }
+    .question-wrapper{
+      display:none;
+      margin-bottom:40px;
+    }
     .question-wrapper.active{display:block}
-    .box-passage{padding:0;margin-bottom:20px;}
-    .box-passage audio,.box-passage img{width:100%;margin-top:10px;display:block;}
-    .box-passage audio{background:#e8d5b8;height:48px;border-radius:0 !important;box-shadow:0 2px 8px rgba(0,0,0,0.15);}
-    .box-question{background:#fff3e0;padding:20px;margin-top:15px;}
-    .option-item{display:flex;align-items:center;margin:18px 0;font-size:16px;}
+    /* GAMBAR & AUDIO: POLOS */
+    .box-passage{
+      padding:0;
+      margin-bottom:20px;
+    }
+    .box-passage audio,
+    .box-passage img{
+      width:100%;
+      margin-top:10px;
+      display:block;
+    }
+    /* CUSTOM AUDIO PLAYER: KREM AGAK TUA + KOTAK (NO BORDER RADIUS) */
+    .box-passage audio{
+      background:#e8d5b8;
+      height:48px;
+      border-radius:0 !important;
+      box-shadow:0 2px 8px rgba(0,0,0,0.15);
+    }
+    .box-passage audio::-webkit-media-controls-panel {
+      background-color:#e8d5b8 !important;
+      border-radius:0 !important;
+    }
+    .box-passage audio::-webkit-media-controls-play-button,
+    .box-passage audio::-webkit-media-controls-volume-slider,
+    .box-passage audio::-webkit-media-controls-current-time-display,
+    .box-passage audio::-webkit-media-controls-time-remaining-display {
+      color:#333;
+    }
+    .box-passage audio::-webkit-media-controls-timeline {
+      background-color:#d4bea2;
+      border-radius:0 !important;
+    }
+    /* SOAL & PILIHAN */
+    .box-question{
+      background:#fff3e0;
+      padding:20px;
+      margin-top:15px;
+    }
+    .option-item{
+      display:flex;
+      align-items:center;
+      margin:18px 0;
+      font-size:16px;
+    }
     .option-item input{display:none}
-    .option-circle{width:32px;height:32px;border:2px solid #333;border-radius:50%;display:flex;align-items:center;justify-content:center;margin-right:12px;flex-shrink:0;font-weight:bold;font-size:15px;}
-    .option-item input:checked + .option-circle{background:#bbdefb;border-color:#2196f3;color:#2196f3;}
-    .nav-bottom{position:fixed;bottom:0;left:0;right:0;display:flex;justify-content:space-between;align-items:center;background:#fff;padding:10px 15px;box-shadow:0 -2px 10px rgba(0,0,0,0.1);box-sizing:border-box;}
-    .nav-bottom button{padding:12px 24px;text-align:center;color:#fff;border:none;font-weight:bold;font-size:16px;border-radius:0;min-width:110px;}
+    .option-circle{
+      width:32px;
+      height:32px;
+      border:2px solid #333;
+      border-radius:50%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      margin-right:12px;
+      flex-shrink:0;
+      font-weight:bold;
+      font-size:15px;
+    }
+    .option-item input:checked + .option-circle{
+      background:#bbdefb;
+      border-color:#2196f3;
+      color:#2196f3;
+    }
+    .nav-bottom{
+      position:fixed;
+      bottom:0;
+      left:0;
+      right:0;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      background:#fff;
+      padding:10px 15px;
+      box-shadow:0 -2px 10px rgba(0,0,0,0.1);
+      box-sizing:border-box;
+    }
+    .nav-bottom button{
+      padding:12px 24px;
+      text-align:center;
+      color:#fff;
+      border:none;
+      font-weight:bold;
+      font-size:16px;
+      border-radius:0;
+      min-width:110px;
+    }
     #prev{background:#2196f3}
     #next{background:#ff9800}
     #result-page{display:none;max-width:600px;margin:auto;padding:20px 15px;}
     .result-box{background:#fff;padding:25px;box-shadow:0 4px 15px rgba(0,0,0,0.1);}
     .wrong-item{margin-top:20px;padding:15px;background:#ffebee;border-left:5px solid #f44336;border-radius:8px;}
     .correct{color:green;font-weight:bold}
-    .back-btn{margin-top:30px;padding:16px;background:#3f51b5;color:#fff;text-align:center;font-weight:bold;font-size:17px;border-radius:12px;cursor:pointer;}
+    .back-btn{
+      margin-top:30px;
+      padding:16px;
+      background:#3f51b5;
+      color:#fff;
+      text-align:center;
+      font-weight:bold;
+      font-size:17px;
+      border-radius:12px;
+      cursor:pointer;
+    }
   </style>
 </head>
 <body>
+
 <div id="login-page">
   <div class="login-container">
     <h1>LATIHAN SOAL</h1>
@@ -59,6 +242,7 @@
   </div>
   <div class="copyright">© 2026 Denzuka - Kim Jongun. All Rights Reserved.</div>
 </div>
+
 <div id="quiz-page">
   <div class="header-fixed">
     <div class="submit-top" id="submitTop">SUBMIT</div>
@@ -70,9 +254,11 @@
     <button id="next">NEXT</button>
   </div>
 </div>
+
 <div id="result-page">
   <div class="result-box" id="resultBox"></div>
 </div>
+
 <script>
 const SPREADSHEET_URL = "https://script.google.com/macros/s/AKfycbzxyVIlsyLswlfnQG618eeUZgN83dd2jfCjU0r7LsNHM3A6NNiibuCIb5e3CNs9J1vVhQ/exec";
 
@@ -100,11 +286,10 @@ const validCredentials = [
   {username: "Zhafif07", password: "20060722"},
   {username: "admin", password: "admin123"},
   {username: "koreafan", password: "hanguk789"},
-  {username:"Satria11",password:"Satria113"},
-  {username:"sultan2026",password:"sultandaulah"},
   {username: "topik2026", password: "seoul2026"}
 ];
 
+// Key kode semua huruf kecil
 const kodeMapping = {
   "b12345": "soal1.json",
   "a09008": "soal2.json",
@@ -115,36 +300,9 @@ const kodeMapping = {
 };
 
 const BASE = "https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
+
 let questions = [], answers = [], current = 0, time = 3000, interval;
 let currentUser = "", currentKode = "";
-
-// HEARTBEAT MONITORING
-const HEARTBEAT_INTERVAL = 15000;
-let heartbeatIntervalId = null;
-
-function sendHeartbeat() {
-  if (!currentUser) return;
-
-  const params = new URLSearchParams({
-    hb: "1",
-    nu: currentUser,
-    app: "latbakor",
-    kd: currentKode || "-",
-    st: document.hidden ? "idle" : "aktif",
-    sisa: time
-  });
-
-  console.log("[HEARTBEAT] Mengirim: " + params.toString());
-
-  fetch(SPREADSHEET_URL + "?" + params.toString() + "&ts=" + Date.now(), {
-    method: "GET",
-    keepalive: true,
-    cache: "no-cache",
-    redirect: "follow"
-  })
-  .then(() => console.log("[HEARTBEAT] Sukses terkirim"))
-  .catch(err => console.error("[HEARTBEAT] Gagal:", err.message));
-}
 
 document.addEventListener("DOMContentLoaded", () => {
   const loginPage = document.getElementById("login-page");
@@ -160,7 +318,9 @@ document.addEventListener("DOMContentLoaded", () => {
     const u = document.getElementById("username").value.trim();
     const p = document.getElementById("password").value.trim();
     const k = document.getElementById("kode").value.trim().toLowerCase();
+
     const userValid = validCredentials.find(cred => cred.username === u && cred.password === p);
+
     if (userValid && kodeMapping[k]) {
       currentUser = u;
       currentKode = k;
@@ -168,11 +328,6 @@ document.addEventListener("DOMContentLoaded", () => {
       quizPage.style.display = "block";
       loadSoal(kodeMapping[k]);
       startTimer();
-
-      // START HEARTBEAT
-      if (heartbeatIntervalId) clearInterval(heartbeatIntervalId);
-      heartbeatIntervalId = setInterval(sendHeartbeat, HEARTBEAT_INTERVAL);
-      sendHeartbeat();
     } else {
       alert("Username / Password / Kode salah");
     }
@@ -180,6 +335,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   async function loadSoal(file) {
     let loadedQuestions = await (await fetch(BASE + file)).json();
+    // shuffle kalau mau acak
     for (let i = loadedQuestions.length - 1; i > 0; i--) {
       const j = Math.floor(Math.random() * (i + 1));
       [loadedQuestions[i], loadedQuestions[j]] = [loadedQuestions[j], loadedQuestions[i]];
@@ -222,11 +378,9 @@ document.addEventListener("DOMContentLoaded", () => {
   submitTop.onclick = () => {
     const kosong = answers.findIndex(a => a === null);
     if (kosong !== -1) { alert("Soal " + (kosong + 1) + " belum dijawab"); show(kosong); return; }
-
     clearInterval(interval);
     quizPage.style.display = "none";
     resultPage.style.display = "block";
-
     let score = 0, html = "";
     questions.forEach((q, i) => {
       const benar = q.answer;
@@ -238,7 +392,6 @@ document.addEventListener("DOMContentLoaded", () => {
           ${q.explanation || "-"}
         </div>`;
     });
-
     const totalQuestions = questions.length;
     const percent = Math.round((score / (totalQuestions * 4)) * 100);
     const dataToSend = {
@@ -253,17 +406,20 @@ document.addEventListener("DOMContentLoaded", () => {
 
     const formData = new URLSearchParams(dataToSend);
 
-    console.log("[SKOR] Mengirim: " + formData.toString());
-
     fetch(SPREADSHEET_URL, {
       method: "POST",
-      body: formData,
+      mode: "no-cors",
       keepalive: true,
-      cache: "no-cache",
+      body: formData,
       redirect: "follow"
     })
-    .then(() => console.log("[SKOR] Sukses terkirim"))
-    .catch(err => console.error("[SKOR] Gagal:", err.message));
+    .then(() => {
+      console.log("✅ Skor dikirim sukses via POST (no-cors)");
+    })
+    .catch(err => {
+      console.error("Gagal POST:", err);
+      // Tidak ada fallback GET lagi → nggak double Anonymous
+    });
 
     resultBox.innerHTML = `
       <h2>Nilai: ${score}</h2>
@@ -277,26 +433,7 @@ document.addEventListener("DOMContentLoaded", () => {
       if (--time < 0) submitTop.onclick();
     }, 1000);
   }
-
-  document.addEventListener("visibilitychange", sendHeartbeat);
-
-  window.addEventListener('beforeunload', () => {
-    if (heartbeatIntervalId && currentUser) {
-      clearInterval(heartbeatIntervalId);
-      const logoutParams = new URLSearchParams({
-        hb: "1",
-        nu: currentUser,
-        app: "latbakor",
-        st: "logout"
-      });
-      fetch(SPREADSHEET_URL + "?" + logoutParams.toString() + "&ts=" + Date.now(), {
-        method: "GET",
-        keepalive: true
-      }).catch(() => {});
-    }
-  });
 });
 </script>
 </body>
 </html>
-
