--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@ const validCredentials = [
   {username: "Zhafif07", password: "20060722"},
   {username: "admin", password: "admin123"},
   {username: "koreafan", password: "hanguk789"},
+  {username: "siwon",password: "kampus2"},
+  {username: "yppsdi",password: "global2026"},
+  {username: "Satria11",password: "Satria113"},
+  {username: "sultan2026",password: "sultandaulah"},
   {username: "topik2026", password: "seoul2026"}
 ];
 
@@ -437,3 +441,4 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
