--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@ const validCredentials = [
   {username: "siwon",password: "kampus2"},
   {username: "yppsdi",password: "global2026"},
   {username: "Satria11",password: "Satria113"},
+  {username: "Azizah27_",password: "Azzh271"},
+  {username: "mila",password: "lestari"},
   {username: "sultan2026",password: "sultandaulah"},
   {username: "topik2026", password: "seoul2026"}
 ];
@@ -441,4 +443,5 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
 
