--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@ const validCredentials = [
   {username: "Hamdan106", password: "Fukuo106"},
   {username: "Dininidia", password: "dininidia11"},
   {username: "kaniarostayuni9", password: "Kania1313"},
+  {username:"dinda",password:"dinda1999"},
   {username: "Dikisetiawan07", password: "Diki2709"},
   {username: "Aisyah18", password: "Aisyah18."},
   {username: "Rizka2026", password: "butterfly24"},
@@ -443,5 +444,6 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
 
 
